--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Fridger</string>
+    <string name="facebook_app_id">299864610395117</string>
+    <string name="fb_login_protocol_scheme">fb299864610395117</string>
 </resources>
