--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="drawer_item_list">Shopping List</string>
     <string name="drawer_item_logout">Logout</string>
     <string name="api">app_id=19ff7314&amp;_app_key=40832fb43799988e3d686246194b8bdc</string>
+    <string name="appwidget_text">EXAMPLE</string>
+    <string name="add_widget">Add widget</string>
 </resources>
